--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
     "@google/generative-ai": "^0.2.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
